--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 									<div class="col-lg-8 col-12 b">31/07/2002</div>
 								</div>
 								<div class="row">
+									<div class="col-lg-4 col-12 boldd">Phone-number</div>
+									<div class="col-lg-8 col-12 b">0967273792</div>
+								</div>
+								<div class="row">
 									<div class="col-lg-4 col-12"><br>
 										<audio controls autoplay>
     											<source src="./music/TiecTraSao.mp3" type="audio/mpeg">
