--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="py-3 px-2 px-lg-4 py-lg-5">
 					<div class="row">
 						<div class="avatarBox col-12 col-lg-5">
-							<img src="https://scontent.fhph1-1.fna.fbcdn.net/v/t1.6435-9/197204739_1163461134140672_7592686818000788733_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=dajbitZI15EAX9SmYba&_nc_ht=scontent.fhph1-1.fna&oh=e3d5a3e186bbf7457e819f8983b311b5&oe=61D42A59" class="img-fluid">
+							<img src="https://files.fm/u/xhpagwjv6" class="img-fluid">
 						</div>
 
 						<div class="infoBox col-12 col-lg-6 mt-2 mt-lg-0">
