--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="py-3 px-2 px-lg-4 py-lg-5">
 					<div class="row">
 						<div class="avatarBox col-12 col-lg-5">
-							<img src="https://scontent.fhan3-5.fna.fbcdn.net/v/t39.30808-6/273420734_1337533970066720_4597252159719651092_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=q8kind4Nq0IAX9ObA2g&_nc_ht=scontent.fhan3-5.fna&oh=00_AT-ISoeTKQ1b_1NnF2sD01b9uWTD0p35c-1TFNMxIqu12Q&oe=6219C6FB" class="img-fluid">
+							<img src="https://te11.herokuapp.com/dir/ywRwxCPJE" class="img-fluid">
 						</div>
 
 						<div class="infoBox col-12 col-lg-6 mt-2 mt-lg-0">
