--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="py-3 px-2 px-lg-4 py-lg-5">
 					<div class="row">
 						<div class="avatarBox col-12 col-lg-5">
-							<img src="https://te11.herokuapp.com/dir/ywRwxCPJE" class="img-fluid">
+							<img src="https://scontent.fhan4-3.fna.fbcdn.net/v/t39.30808-6/274334098_1347911045695679_4932347906108157540_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=nSmnkW2aBhQAX-R3bmY&_nc_ht=scontent.fhan4-3.fna&oh=00_AT_St4SvVz_cAb0xqWc48faANNpKMV1pijf0P1IKCPTchQ&oe=621988E3" class="img-fluid">
 						</div>
 
 						<div class="infoBox col-12 col-lg-6 mt-2 mt-lg-0">
