--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="py-3 px-2 px-lg-4 py-lg-5">
 					<div class="row">
 						<div class="avatarBox col-12 col-lg-5">
-							<img src="https://scontent.fhan4-3.fna.fbcdn.net/v/t39.30808-6/274334098_1347911045695679_4932347906108157540_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=nSmnkW2aBhQAX-R3bmY&_nc_ht=scontent.fhan4-3.fna&oh=00_AT_St4SvVz_cAb0xqWc48faANNpKMV1pijf0P1IKCPTchQ&oe=621988E3" class="img-fluid">
+							<img src="https://pbs.twimg.com/profile_images/1505147243716030465/x8GyD54G_400x400.jpg" class="img-fluid">
 						</div>
 
 						<div class="infoBox col-12 col-lg-6 mt-2 mt-lg-0">
@@ -79,6 +79,11 @@
 					<!-- instagram-->
 					<a style="text-decoration: none" href="https://www.instagram.com/ngdtai2k2/" target="_blank">
 						<span class="fab fa-instagram mr-4 mr-lg-5"></span>
+					</a>&ensp;
+					
+					<!-- twitter-->
+					<a style="text-decoration: none" href="https://twitter.com/ngdtai2k2" target="_blank">
+						<span class="fab fa-twitter mr-4 mr-lg-5"></span>
 					</a>
 				</div>
 			</div>
